--- a/index.html
+++ b/index.html
@@ -1,1 +1,20 @@
-Hello World
+<!DOCTYPE html>
+<html>
+    <head>
+        <meta charset="UTF-8">
+        <title>PvPCore.PL</title>
+        <link rel="stylesheet" href="style2.css">
+    </head>
+    <body>
+        <nav>
+            <li>
+                <img class="logo" src="miecze.png">
+                <a class="nav1" href="#">Strona Główna</a>
+                <a class="nav2" href="#">FAQ</a>
+                <a class="nav3" href="#">Regulamin</a>
+                <a class="nav4" href="#">Sklep</a>
+            </li>
+        </nav>
+        <img class="tlo" src="tlo.png">
+    </body>
+</html>
