--- a/index.html
+++ b/index.html
@@ -4,6 +4,8 @@
         <meta charset="UTF-8">
         <title>PvPCore.PL</title>
         <link rel="stylesheet" href="style.css">
+
+        </script>
     </head>
     <body>
         <nav>
@@ -15,6 +17,8 @@
                 <a class="nav4" href="#">Sklep</a>
             </li>
         </nav>
-        <img class="tlo" src="tlo.png">
+        <div class="galeria1">
+            <img src="zdjecie1.png" class="zdjecie1">
+        </div>
     </body>
 </html>
